--- a/Brandon/assets/css/style.css
+++ b/Brandon/assets/css/style.css
@@ -7,6 +7,13 @@ font-family: 'Poppins', sans-serif;
 *{
     font-family: 'Poppins', sans-serif;
     color: black;
+    font-size: 1.1rem;
+}
+
+h2{
+    font-family: 'Baloo Chettan 2', cursive;
+    font-size: 3rem;
+    font-weight: bold;
 }
 
 .offcanvas{
@@ -23,8 +30,8 @@ font-family: 'Poppins', sans-serif;
 }
 header{
     background-image: url(../images/banner.jpg);
-    background-size: 100%;
-    background-position: center;
+    background-size: cover;
+    background-position: center center;
     background-repeat: no-repeat;
     z-index: 0;
 }
@@ -43,6 +50,25 @@ header{
     border: 2px solid black;
 }
 
+main a.btn{
+    color: Black!important;
+    border: 2px solid black;
+}
+.contact a.btn{
+    color: white!important;
+    background-color: black;
+}
+main a.btn:hover{
+    color:white!important;
+    background-color: red!important;
+    transition: all .5s ease-in-out;
+    border: 2px solid black;
+}
+
+footer a.btn:hover i{
+    color:red!important;
+    transition: all .5s ease-in-out;
+}
 .skate img{
     right: 32%;
     top: 8%;
@@ -51,14 +77,15 @@ header{
 }
 
 
-.carousel-indicators {
+
+header .carousel-indicators {
     display: block;
     right: inherit;
     margin-left: 20px;
     bottom: 66px;
 }
 
-.carousel-indicators li{
+header .carousel-indicators li{
     background-color: #000!important;
     width: 20px!important;
     height: 20px!important;
@@ -66,6 +93,91 @@ header{
     opacity: 1!important;
 }
 
-.carousel-indicators li.active {
+header .carousel-indicators li.active {
     background-color: red!important;
 }
+
+
+.testimonials .carousel-indicators button{
+    background-color: #000!important;
+    opacity: 1!important;
+}
+
+.testimonials .carousel-indicators button.active {
+    background-color: red!important;
+}
+
+
+.classes .clip{
+    left: 1.5%;
+    top: 50%;
+}
+.contact .clip{
+    left: 1.5%;
+    top: 50%;
+}
+
+.about .cLeft{
+    left: 1.5%;
+    top: 1.5%;
+}
+.about .cRight{
+    right: 1.5%;
+    bottom: 1.5%;
+}
+.testimonials .clip{
+    right: 1.5%;
+    top: 50%;
+}
+
+.bg-danger{
+    background-color: red!important;
+}
+
+.contact input{
+    border: 0;
+    border-bottom: 1px solid rgb(138, 138, 138);
+    border-radius: 0;
+    padding-top: 2rem;
+}
+.contact input.message{
+    padding-top: 6rem!important;
+}
+/* Razia Parvin CSS  */
+
+.img {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    z-index: -1;
+  }
+
+
+  .button{
+    border-radius: 2rem;
+    color:black;
+  }
+  .button:hover{
+    background-color: red;
+  }
+  /*about end*/
+
+  .buttonOne{
+    border-radius: 2rem;   
+  }
+
+  .testimonials{
+    background-image: url(../images/test_bg.jpg);
+    background-size: cover;
+    
+  }
+  
+  .markden{
+    color: red;
+  }
+  
+  .border{
+    border-radius: 1rem;
+
+  } 
+  /* Razia Parvin CSS  */
