--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@ font-family: 'Poppins', sans-serif;
     font-size: 1.1rem;
 }
 
+
 h2{
     font-family: 'Baloo Chettan 2', cursive;
     font-size: 3rem;
@@ -21,6 +22,31 @@ h2{
     background-color: red;
     transition: all .3s ease-in;
 }
+
+@media screen and (min-width: 0px; max-width: 576px) {
+    .offcanvas {
+        width: 80% !important;  
+    }
+  }
+
+@media screen and (max-width: 768px) {
+    *{
+        font-size:.9rem;
+    }
+    .offcanvas {
+        width: 50% !important;  
+    }
+  }
+  
+  @media screen and (max-width: 992px) {
+    *{
+        font-size: 1rem;
+    }
+    .offcanvas {
+        width: 25% !important;  
+    }
+  }
+
 .offcanvas a{
     color: white;
     font-size: 1.2rem;
